Float and text wrap fixed on Index

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .navbar-brand {
     text: rgb(79, 79, 160);
 }
@@ -7,23 +8,19 @@
     background-size: cover;
 }
 
+
+
 /*CSS for index/about */
 
 .card-text {
     display: inline-block;
     }
 
-img {
-    clear: both;
+.textwrap {
     float: left;
-    margin: 10px;
+    padding-right: 20px;
   
 }
-
-
-
-
-
 
 
 
@@ -68,15 +65,12 @@ input[type=text], select {
   .card  {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 10px;
-    
+        
   }
 
   footer {
-    padding: 100px;
+    padding: 200px;
     clear: both;
-    background: rgb(16, 16, 143)
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
+    
    
 }
